Implement Seq logging

--- a/InternalAPIGateway/appsettings.json
+++ b/InternalAPIGateway/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Seq": {
+    "ServerUrl": "http://localhost:5341",
+    "ApiKey": "ZXnWrmsFuFeengazWbRq",
+    "MinimumLevel": "Trace",
+    "LevelOverride": {
+      "Microsoft": "Warning"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
