Add service sample swagger

--- a/ServiceSampleSwagger/ServiceSampleSwagger.csproj
+++ b/ServiceSampleSwagger/ServiceSampleSwagger.csproj
@@ -1,19 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>0a598771-9bd8-4df6-8692-15e6b4b382a6</UserSecretsId>
+    <UserSecretsId>efbac21a-27a3-412f-9f45-46323fb873ca</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageReference Include="MMLib.SwaggerForOcelot" Version="8.2.0" />
-    <PackageReference Include="Ocelot" Version="23.2.2" />
-    <PackageReference Include="Seq.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
